--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
               <label for="checkbox">Lembre-me</label>
             </div>
             <div>
-              <p>Esqueci minha senha</p>
+              <a href="#">Esqueci minha senha</a>
             </div>
           </div>
           <button>Entrar</button>
           <div class="account">
             <p>Não tem uma conta?</p>
             &nbsp;
-            <span>Registre-se</span>
+            <a href="#">Registre-se</a>
           </div>
         </fieldset>
       </form>
